<resources>
    <string name="app_name">Wach (IIT Delhi)</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">18451104551705</string>
    <string name="fb_login_protocol_scheme">fb184511045517713</string>
    <string name="Filter">Filter</string>
    <string name="Apply">Apply</string>
    <string name="ClearAll">Cancel</string>
    <string name="Music">Music</string>
    <string name="Art">Art</string>
    <string name="weather_foggy">Foggy</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_rainy">Rainy</string>
    <string name="weather_snowy">Snowy</string>
    <string name="weather_thunder">Thunder</string>
    <string name="weather_drizzle">Drizzy</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_clear_night">Clear</string>
    <string name="open_weather_maps_app_id">66ce252c0fa87e3aa71fd7f43d72ef9f</string>
    <string name="science">Sports</string>
    <string name="cooking">Cooking</string>
    <string name="Dance">Dance</string>
    <string name="others">Others</string>
    <string name="Gaming">Gaming</string>
    <string name="social">Social</string>
    <string name="education">Education</string>
    <string name="based_on_rating">Based On Rating</string>
    <string name="ratingText">3.0</string>
    <string name="menu_home">Home</string>
    <string name="menu_create_event">Create Event</string>
    <string name="menu_my_event">My Event</string>
    <string name="menu_my_friend">My Friend</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="google_maps_key">AIzaSyDCQ2nskLKYNVQMhOroMSLS2YTYa3mAGzg</string>
    <string name="Social">Social</string>
    <string name="Home">Home</string>
    <string name="myEvents">Events</string>
    <string name="chat">Chats</string>
    <string name="setting">Settings</string>
    <string name="payment">Payment</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="terms_and_condotions">Terms And Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="all_notificatins">All Notifications</string>
    <string name="select">Select</string>
    <string name="likes">Like</string>
    <string name="events">Events</string>
    <string name="attending_event">Attending Event</string>
    <string name="private_event">Private Event</string>
    <string name="comment">Comments</string>
    <string name="select_catgory">Select category</string>
    <string name="event_name">Event name</string>
    <string name="enter_name">Enter name</string>
    <string name="location">Location</string>
    <string name="event_type">Privacy</string>
    <string name="event_start_date_and_time">Event start date and time</string>
    <string name="event_end_date_and_time">Event end date and time</string>
    <string name="description">Description</string>
    <string name="share_on_instagram">Share On Instagram</string>
    <string name="share_on_facebook">Share on facebook</string>
    <string name="btn_next">Next</string>
    <string name="create">Create</string>
    <string name="no_of_participents">Maximum no of participants</string>
    <string name="last_date_to_join_event">Last date to join this event</string>
    <string name="last_date_to_cancel_event">Last date to cancel this event</string>
    <string name="payment_description">Payment Description</string>
    <string name="payment_link">Payment Link</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="hide_locations">Hide Locations</string>
    <string name="show_locations">Show Locations</string>
    <string name="GPS_settings">GPS Settings.</string>
    <string name="GPS_is_not_enabled_do_you_want_to">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="discover_me_in_search">Discover me in search</string>
    <string name="transition">transit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_error_occured">Some error occured!!</string>
    <string name="invalid_phone_number"></string>
    <string name="sport">Sports</string>
    <string name="eventDetail">Running the gomut from  </string>
    <string name="android"> Large parts of Android are written in Java and its APIs are designed to be called primarily from Java. It is possible to develop C and C++ app using the Android Native Development Kit (NDK), however it is not something that Google promotes.</string>
    <string name="queOne">Where can i find my settings?</string>
    <string name="queTwo">Can i post events for multiple categories?</string>
    <string name="queThree">How can i change my location?</string>
    <string name="queFour">Why my event is not approved?</string>
    <string name="queFive">Sport</string>
    <string name="queSix">Sport</string>
    <string name="art">Art</string>
    <string name="date_of_birth">Enter date of birth</string>
    <string name="birth">Date of Birth</string>
    <string name="email_address">Email Address</string>
    <string name="male">Male</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_country">Select Country</string>
    <string name="internet_alert">Please check internet connection!!</string>
    <string name="select_category">Please Select category</string>
    <string name="cancel_event_alert">Are you sure you want to cancel the event ?</string>
    <string name="delete_event_alert">Are you sure you want to delete the event ?</string>
    <string name="select_category_image">Please select an image</string>
    <string name="select_event_name">Please enter Event name</string>
    <string name="select_minimum_age">Please enter Minimum age to join</string>
    <string name="select_location">Please select Location</string>
    <string name="select_start_date_time">Please select Event start date and time</string>
    <string name="select_end_date_time">Please select Event end date and time</string>
    <string name="select_discription">Please enter Description</string>
    <string name="fill_phone_number">Please enter your phone number</string>
    <string name="fill_phone_password">Please enter your password</string>
    <string name="select_type">Please select event type</string>
    <string name="select_participants">Please enter Maximum no of participants</string>
    <string name="last_date">Please select Last date to join this event</string>
    <string name="last_date_cancel">Please select Last date to cancel this event</string>
    <string name="enter_user_name">Please Enter name.</string>
    <string name="enter_username">Please Enter username</string>
    <string name="username_length">Username should be greater than 3 characters</string>
    <string name="enter_username_valid">Please Enter valid username</string>
    <string name="enter_aboutme">Please Enter your description</string>
    <string name="enter_user_id">Enter username</string>
    <string name="enter_date_of_birth">Please enter Date of birth</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_valid_email_address">enter valid email address</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="name_length">Name should be greater than 3 characters</string>
    <string name="valid_phone_number">The phone number you entered is too long for the country </string>
    <string name="valid_number">Please enter valid number </string>
    <string name="valid_password">Please enter valid password </string>
    <string name="valid_payment_description">Please enter Payment description </string>
    <string name="valid_payment_link">Please enter Payment link </string>
    <string name="version_update">New version %1$s is available</string>
    <string name="changenumber">Change Number</string>
    <string name="disable_account">Disable Account</string>
    <string name="status_">Status</string>
    <string name="your_current_status">Your Current Status</string>
    <string name="select_your_status">Select Your Status</string>
    <string name="about">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="group_subject_icon">Please provide a group subject and optional group icon</string>
    <string name="verfication_code">We have sent a verification code to</string>
    <string name="xx">XXX XXX XX00</string>
    <string name="Enter_verification_code">Enter verification code</string>
    <string name="verification">Verification</string>
    <string name="phoneList">Contacts</string>
    <string name="please_wait_for_ten_seconds">Please wait for 10 seconds. If you don\'t receive it, please request for the Verification Code to be resent.</string>
    <string name="to">To :</string>
    <string name="recents">Chats</string>
    <string name="me">Me</string>
    <string name="next">Next</string>
    <string name="from">From :</string>
    <string name="morningTime">Morning Timing</string>
    <string name="eveningTime">Evening Timing</string>
</resources>