<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_5dp">

    <RelativeLayout
        android:id="@+id/rlDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="monday"
            android:textColor="@color/black_dark" />


        <ImageView
            android:id="@+id/imgTick"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:padding="@dimen/padding_5"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llTime"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/llMorningTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/morningTime" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/padding_5"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/llMorningFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtMorningFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/padding_5"
                        android:background="@drawable/borderblack"
                        android:drawableTint="@color/colorPrimary"
                        android:hint="@string/from"
                        android:padding="@dimen/padding_5dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/txt_gray"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMorningTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtMorningTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/borderblack"
                        android:drawableTint="@color/colorPrimary"
                        android:hint="@string/to"
                        android:padding="@dimen/padding_5dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/txt_gray"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llEveningTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/eveningTime" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/padding_5"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/llEveningFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtEveningFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/padding_5"
                        android:background="@drawable/borderblack"
                        android:drawableTint="@color/colorPrimary"
                        android:hint="@string/from"
                        android:padding="@dimen/padding_5dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/txt_gray"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llEveningTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtEveningTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/borderblack"
                        android:drawableTint="@color/colorPrimary"
                        android:hint="@string/to"
                        android:padding="@dimen/padding_5dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/txt_gray"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>